vcs/specs/parser/fail/types/negative_bound_invalid.vr
// @test: parse-fail
// @level: L0
// @tags: parser, types, constraint, negative, error
// @description: Test detection of double negation in type bound
// @expected-error: E050

// Double negation is not valid in type bounds
fn test<T: Clone + !!Sync>(x: T) {}
